[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/SpawnRange/SpawnRange.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="SpawnRange" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnLeft" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnLeft"]
shape = SubResource( 1 )

[node name="SpawnRight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnRight"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="SpawnLeft" to="." method="_on_SpawnLeft_body_entered"]
[connection signal="body_entered" from="SpawnRight" to="." method="_on_SpawnRight_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
